# File_Cleaner_Merger

./: .gitignore  Dockerfile  README.yaml  README_dev.md  pyproject.toml  readme.md  requirements.txt  tox.ini
.github/workflows/: bandit.yml  black-duck-security-scan-ci.yml  codacy.yml  codeql.yml  docker-image.yml  ossar.yml  pysa.yml  python-package.yml  python-publish.yml  security-analysis.yml
docker/3.10/: Dockerfile
docker/3.11/: Dockerfile
docker/3.12/: Dockerfile
docker/3.9/: Dockerfile
pure_core/: __main__.py  duplicate_detector.py  exclusion_config.py  file_sync_manager.py
scr/: .bandit.yml  .pre-commit-config.yaml  README_user.md  duplicate_detector.py  exclusion_config.py  file_sync_manager.py  main.py
scr/clearfile/: duplicate_detector.py
scr/tests/: test_duplicate_detector.py  test_file_sync_manager.py
tests/: test_duplicate_detector.py  test_file_sync_manager.py
