[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_cleaner_merger"
version = "0.1.0"
description = "Καθαριστής και Συγχωνευτής αρχείων"
authors = [
  { name="kostas messsinis", email="messinisk35@gmail.com" }
]
dependencies = ["pandas", "numpy"]
requires-python = ">=3.9"
