[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_cleaner_merger"
version = "0.1.0"
description = "Καθαριστής και Συγχωνευτής αρχείων"
readme = "README.md"
authors = [
    { name="kostas messsinis", email="messinisk35@gmail.com"}
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
# Λέμε ρητά ποια packages να περιλάβει
packages = ["pure_core"]

[tool.setuptools.package-dir]
# Το package pure_core είναι απευθείας στο root directory
"" = "."

[tool.setuptools.exclude-package-data]
# Προαιρετικά: αγνοούμε φακέλους που μοιάζουν με packages αλλά δεν θέλουμε
"*" = [ "pure_core*",]
